# buybob

./: README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 43423a6fd434_initial_tables.py
app/admin/: enums.py  models.py  resources.py  routes.py  settings.py
app/admin/display/: __init__.py  product_table.py
app/admin/templates/: base.html  create.html  dashboard.html  layout.html  list.html  password.html  update.html
app/admin/templates/resource/: list.html
app/models/: __init__.py
app/routers/: __init__.py  auth.py  department.py  users.py
app/schemas/: __init__.py
app/services/: __init__.py
app/services/auth/: __init__.py  auth_config.py  token_generate.py  validate_password.py
app/utils/: __init__.py
database/: __init__.py  core.py
database/models/: department.py  employees.py  product.py
migrations/models/: 0_20260629183714_init.py
