[tool.poetry]
name = "buybob-app"
version = "0.1.0"
description = "r"
authors = ["Ola Amigo<>"]

[tool.poetry.dependencies]
python = "^3.10.0"
passlib = "^1.7.4"
python-jose = "^3.5.0"
fastapi = ">=0.109.1"
pydantic = "^2.5.0"
SQLAlchemy = ">=1.4.35"
psycopg2-binary = "^2.9.9"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
bcrypt = "^4.1.2"
jinja2 = "^3.1.2"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
aiofiles = "^24.1.0"
loguru = "^0.7.0"
itsdangerous = "^2.2.0"
PyJWT = "^2.8.0"
starlette = "^0.49.1"
requests = ">=2.28.1"
tenacity = "^8.0.0"

[tool.poetry.dev-dependencies]
black = "^26.5.1"
isort = "^8.0.1"
pytest = "^7.4.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs | \.git | \.hg | \.mypy_cache | \.tox | \.venv | build | dist
)/
'''

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
addopts = "--disable-warnings"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::DeprecationWarning"
]
asyncio_mode = "auto"